Fix Android 26 URL encoding compatibility